# Aetova

./: Code Steam.txt  README.md  prtest.txt
API Google Drive C#/TestAPI_GD_CS/: TestAPI_GD_CS.sln
Aetova/: .gitignore  Aetova.sln  CMakeLists.txt  common.h  main.cpp
Aetova/Aetova/: Aetova.vcxproj.filters
Aetova/Aetova/Resources/: html.cpp  ui.cpp
Aetova/Aetova/Resources/HTML/: spitch.html
Aetova/Aetova/Scripts/GameWindow/ButtonGame/: buttongame.h
Aetova/Aetova/Scripts/GameWindow/HTMLLabel/: moc_htmllabel.cpp
Aetova/Aetova/Scripts/GameWindow/HTMLLabel/LabelTeam/: labelteam.h
Aetova/Resources/: generateMoc.bat  generateResources.bat  html.cpp  resources.qrc  ui.cpp
Aetova/Resources/HTML/: datasheet.html
Aetova/Scripts/: main.cpp
Aetova/Scripts/GameProcess/GameLauncher/: gamelauncher.cpp  gamelauncher.h
Aetova/Scripts/GameProcess/GameThread/: gamethread.cpp  gamethread.h
Aetova/Scripts/GameWindow/: gamewindow.cpp
Aetova/Scripts/GameWindow/ButtonGame/: buttongame.cpp
Aetova/Scripts/GameWindow/SplashLabel/: moc_splashlabel.cpp
AetovaVS/Aetova/Resources/: generateMoc.bat  generateResources.bat
AetovaVS/Aetova/Resources/HTML/: team.html
AetovaVS/Aetova/Scripts/GameProcess/GameThread/: moc_gamethread.cpp
AetovaVS/Aetova/Scripts/GameWindow/BackgroundWidget/: backgroundwidget.h
AetovaVS/Aetova/Scripts/GameWindow/HTMLLabel/: htmllabel.cpp
AetovaVS/Aetova/Scripts/GameWindow/SplashLabel/: moc_splashlabel.cpp
Downloader/: .gitignore  go.mod  main.go
Downloader/WorkingDirectory/: cleaner.bat
Downloader/downloader/: assemble.go  chop.go  unzip.go
Downloader/util/: utilsFunc.go  utilsJson.go  utilsStruct.go
Installer/: intaller.AppInstaller
QT Test/HelloWorld/: CMakeLists.txt
QT Test/QT Design/Test/: Test.qmlproject  Test.qmlproject.qtds
QT Test/QT Design/Test/TestContent/: Screen01.ui.qml
QTTest/QTCreator/JourneepLauncher/: CMakeLists.txt  UntitledProject1.qmlproject  UntitledProject1.qrc  main.cpp  main.qml
QTTest/QTCreator/JourneepLauncher/UntitledProject1Content/: CMakeLists.txt
QTTest/QTCreator/LauncherTest/: CMakeLists.txt  main.cpp
QTTest/QTDesign/Aetova/: Aetova.qmlproject  Aetova.qmlproject.qtds  CMakeLists.txt  qds.cmake
QTTest/QTDesign/Aetova/Aetova/: CMakeLists.txt  Constants.qml  qmldir
QTTest/QTDesign/Aetova/Aetova/designer/: plugin.metainfo
QTTest/QTDesign/Aetova/AetovaContent/: App.qml  CMakeLists.txt  Home.ui.qml  TestLauncher.ui.qml
QTTest/QTDesign/Aetova/App/: gamelauncher.cpp  gamelauncher.h  gamethread.h  main.cpp
QTTest/QTDesign/Aetova/App/autogen/: environment.h
QTTest/QTDesign/Test/: CMakeLists.txt  Test.qmlproject  Test.qmlproject.qtds.9ba0dca  qds.cmake
QTTest/QTDesign/Test/App/autogen/: environment.h
QTTest/QTDesign/Test/Test/: CMakeLists.txt
QTTest/QTDesign/Test/TestContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
QTTest/QTDesign/UntitledProject1/: CMakeLists.txt  CMakeLists.txt.user.2206d46  UntitledProject1.qmlproject.qtds  UntitledProject1.qrc
QTTest/QTDesign/UntitledProject1/App/: gamelauncher.cpp  gamelauncher.h  gamethread.h  main.cpp
QTTest/QTDesign/UntitledProject1/UntitledProject1Content/: Screen01.ui.qml
QTTest/VisualStudio/Aetova/: .gitignore
QTTest/VisualStudio/Aetova/Aetova/: Aetova.vcxproj  Aetova.vcxproj.filters  common.cpp  gameWindow.h  gamelauncher.cpp  gamethread.h  gamewindow.cpp  generateMoc.bat  generateResources.bat  main.cpp  moc_gamelauncher.cpp  moc_gamewindow.cpp  resources.qrc
QTTest/VisualStudio/Aetova/Aetova/Resources/: generateMoc.bat  generateResources.bat  html.cpp  html.qrc  oldmain.txt  resources.qrc  ui.qrc
QTTest/VisualStudio/Aetova/Aetova/Resources/HTML/: datasheet.html  team.html
QTTest/VisualStudio/Aetova/Aetova/Scripts/: main.cpp
QTTest/VisualStudio/Aetova/Aetova/Scripts/Common/: common.h
QTTest/VisualStudio/Aetova/Aetova/Scripts/GameProcess/GameLauncher/: gamelauncher.cpp
QTTest/VisualStudio/Aetova/Aetova/Scripts/GameProcess/GameThread/: gamethread.cpp
QTTest/VisualStudio/Aetova/Aetova/Scripts/GameWindow/: gamewindow.cpp  gamewindow.h
QTTest/VisualStudio/Aetova/Aetova/Scripts/GameWindow/BackgroundWidget/: backgroundwidget.cpp  moc_backgroundwidget.cpp
QTTest/VisualStudio/Aetova/Aetova/x64/Debug/: vc143.idb
QTTest/VisualStudio/TestQT/: TestQT.sln
QTTest/VisualStudio/TestQT/TestQT/: TestQT.vcxproj
QTTest/VisualStudioCode/: main.cpp
Site/: test.html
Test FrontEnd/: Test css.css  test.html  test.js
TestExe/ConsoleApp1/ConsoleApp1/: Program.cs
TestExe/TestEXE/: TestEXE.sln
TestExe/TestEXE/TestEXE/: TestEXE.cpp
TestExe/TestEXE/TestEXE/x64/Debug/: TestEXE.exe.recipe  TestEXE.ilk  vc143.idb
TestExe/TestEXE/TestEXE/x64/Debug/TestEXE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestEXE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TestExe/TestEXE/TestEXE/x64/Release/: TestEXE.exe.recipe  TestEXE.iobj  TestEXE.ipdb
TestExe/TestEXE/TestEXE/x64/Release/TestEXE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestEXE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TestExe/TestEXE/x64/Debug/: List.txt
TestExe/TestEXE/x64/Release/JourneepBuild/Journeep_Data/: ScriptingAssemblies.json  app.info
TestGo/: go.mod  hello.go  main.go
TestGo/Beyond100Lines/: concurrency.go  pointers.go  struct.go
TestGo/Control_Flow/: control_flow.go
TestGo/Slices/: slices.go
TestGo/arrays/: arrays.go  arrrays_refactored.go
TestGo/map/: map.go
TestGo/types/: types.go
TestGo/utils/: pause.go
TestGo/variables/: variable.go  variable_refactored.go
TestInterface/ConsoleApp1/: ConsoleApp1.sln
TestInterface/TestEXE/TestEXE/: TestEXE.cpp  TestEXE.vcxproj
TestInterface/TestEXE/TestEXE/x64/Debug/: TestEXE.exe.recipe  TestEXE.ilk  vc143.idb
TestInterface/TestEXE/TestEXE/x64/Debug/TestEXE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TestEXE.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+25 files in other folders)
